--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -2,41 +2,48 @@
 .footer{
     max-width: 1296px;
     margin: 64px auto;
-    
-}
-.footer-t{
+    &-t{
     border-bottom: 1px solid $neutral-300;
+    }
+
+    &-t-r{
+        color: $neutral-900;
+    }
+    &-b p{
+        color: $neutral-600;
+    }
+    &-b{
+        justify-content: center;
+    }
+
 }
 
-.footer-t-r{
-    color: $neutral-900;
-}
 
-.footer-b p{
-    color: $neutral-600;
-}
-.footer-b{
-    justify-content: center;
-}
+
+
 @media screen and (max-width: 576px) {
     .footer {
         padding-left:12px;  /* 讓內容離開螢幕邊緣 */
         padding-right: 12px;
         box-sizing: border-box;
-    }
-    .footer-t {
+
+        &-t {
         flex-direction: column;    /* 主區塊垂直排列 */
         align-items: flex-start;       
         text-align: left;
         
-    }
+        }
 
-    .footer-t-r {
+        &-t-r {
         flex-direction: column;    /* 讓連結垂直排列 */
         justify-content: center;
         padding-left: 12px;
         gap: 16px; /* 控制上下間距 */
+        }
     }
+    
+
+    
 }
 
 
@@ -51,18 +58,21 @@
 }
 .member{
     background-color:$primary-200;
+    button{
+        background-color: black;
+        color: white;
+        margin:  24px;
+        font-size: 16px;
+        font-weight: 500;
+        padding: 12px 24px;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+
 }
 
-.member button{
-    background-color: black;
-    color: white;
-    margin:  24px;
-    font-size: 16px;
-    font-weight: 500;
-    padding: 12px 24px;
-    border-radius: 4px;
-    cursor: pointer;
-}
+
 
 @media screen and (max-width:576px){
     .mga{
