--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -25,8 +25,8 @@
 .col-10{
     flex:1;
     width: 83.3333%;
-    padding-left: 12px;
-    padding-right: 12px;
+    // padding-left: 12px;
+    // padding-right: 12px;
 }
 .row{
     display: flex;
@@ -115,12 +115,12 @@
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.05rem;
-    color: var(--neutral-900);
+    color: $neutral-900;
     padding: 8px 15px;
 }
 
 .page a:hover{
-    background-color: var(--primary-300);
+    background-color: $primary-300;
 }
 .mga{
     margin: 0 auto;
